[package]
name = "autorpc"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
alloy = {version="1.7.3",features=["essentials"]}
axum = "0.8.8"
redb = "3.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = {version="1.0.228",features=["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = {version="1.50.0",features=["full"]}
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
parking_lot = "0.12.5"
rpassword = "7"
futures = "0.3.32"
dotenvy = "0.15.7"
